--- a/css/common.css
+++ b/css/common.css
@@ -52,6 +52,11 @@
     format("woff2")
 }
 
+/*body {
+    background-image:url(../img/4fc081907b459.png); 
+    background-repeat:no-repeat;
+    background-position: center;
+}*/
 
 
 .fs_14 {font-size: 14px;}
